# hsm

./: .clang-format  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
bench/: CMakeLists.txt  cost_of_enter.cpp
example/: CMakeLists.txt  alg.cpp  alg_test.cpp  alg_test_unrolled.cpp  back.cpp  front.cpp  sort_test.cpp  test_flatten_sm.cpp
include/hsm/: .back.hpp.swo  .hsm.hpp.swp  back.hpp  config.hpp  front.hpp  hsm.hpp  hsm_fwd.hpp  unroll_sm.hpp
include/hsm/detail/: back.hpp  flag.hpp  front.hpp  hsm.hpp  str_lit.hpp
