add_executable(front front.cpp)
target_link_libraries(front hsm)
add_executable(back back.cpp)
target_link_libraries(back hsm)
add_executable(alg alg.cpp)
target_link_libraries(alg hsm)
add_executable(sort sort_test.cpp)
target_link_libraries(sort hsm)
add_executable(alg_test alg_test.cpp)
target_link_libraries(alg_test hsm)
